Changes for APR 1.3.0

  *) Keep testpipe.c from hanging on win32. [Garrett Rooney]

  *) Fix assertion from double close of a handle with a rwlock on win32.
     [Evgueni Brevnov <evgueni.brevnov gmail.com>]

  *) APR_FIND_APR macro now supports customisable detailed checks on
     each installed apr. [Justin Erenkrantz, Colm MacCarthaigh]

  *) APR_FIND_APR macro no longer checks /usr/local/apache2/
     [Colm MacCarthaigh]

  *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
     and how to determine which parts of the resulting apr_finfo_t can be
     used in such a case.
     [Garrett Rooney]

  *) Cause apr_file_write_full on win32 to consider the timeout value set by 
     apr_file_pipe_timeout_set.  PR 30182
     [<eholyat olf.com>]

  *) Only include uuid/uuid.h if we haven't already included uuid.h, since
     doing so can result in type conflicts.
     [Craig Rodrigues <rodrigc crodrigues.org>]

  *) Fix EOF handling for unbuffered reads on win32.
     [Konstantin Sharenkov <Konstantin.Sharenkov enterra-inc.com>]

  *) Fix passing "" as an argument to the program started by apr_proc_create
     on Win32.
     [Philip Martin <philip codematters.co.uk>

  *) Bugfix for apr_pollset_poll() on systems that implement pollsets
     using select(2): properly compute the number of signalled desciptors
     when one or more of them are both readable and writable.
     [Dror Shilo <Dror.Shilo ericom.com>, Gerry <gerry everythingsucks.co.uk>]

  *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
     O(n)-time lookup in apr_pollset_remove() (currently implemented
     only for epoll).  [Brian Pane]

  *) Add apr_file_buffer_set() and apr_file_buffer_size_get() functions
     to support variable buffer sizes with APR file handles.
     [Colm MacCarthaigh]

  *) Add apr_file_open_flags_std[err|out|in]() functions.
     [Colm MacCarthaigh]

  *) stdio: apr_file_open_std[err|out|in]() functions now set the APR_WRITE