@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix seeks with files opened in xthread mode for append on win32.
+     [M Joonas Pihlaja <jpihlaja cc.helsinki.fi>, Garrett Rooney]
+
   *) Keep testpipe.c from hanging on win32. [Garrett Rooney]
 
   *) Fix assertion from double close of a handle with a rwlock on win32.
